# danmaQ

./: .travis.yml  .ycm_extra_conf.py  CMakeLists.txt
src/: CMakeLists.txt  danmaQ_app.cpp  danmaQ_app.h  danmaQ_app_base.h  danmaku.h  danmaku_ui.cpp  danmaku_ui.h  danmaku_window.cpp  danmaku_window.h
tests/: CMakeLists.txt  test_dm.cpp  tests.h
